# stampy

./: .gitignore  Cargo.toml  README.md
src/: args.rs  log.rs  main.rs
